Se crea pagina de registro y se colocan los elementos visuales , se modifica la pagina de login y se coloca un footer con un boton, se agrega a los modulos del programa el elemento registrarPage

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -32,6 +32,10 @@
   <p>ó</p>
   <button ion-button block color="default">Iniciar sesión con facebook</button>
   <br><p><a href="#">¿Olvidaste tu contraseña?</a></p>
-
 </div>
+<ion-footer>
+    <ion-toolbar>
+      <button ion-button block color danger>Crear una cuenta</button>
+    </ion-toolbar>
+  </ion-footer>
 </ion-content>
