--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -35,7 +35,7 @@
 </div>
 <ion-footer>
     <ion-toolbar>
-      <button ion-button block color danger>Crear una cuenta</button>
+      <button ion-button block color danger (click)="goRegistrar()">Crear una cuenta</button>
     </ion-toolbar>
   </ion-footer>
 </ion-content>
