--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,7 +28,7 @@
   </ion-item>
 </div>
 <div>
-  <button ion-button block color="danger">Iniciar Sesión</button>
+  <button ion-button block color="danger" (click)="iniciarSesion()">Iniciar Sesión</button>
   <p>ó</p>
   <button ion-button block color="default">Iniciar sesión con facebook</button>
   <br><p><a href="#">¿Olvidaste tu contraseña?</a></p>
