--- a/src/pages/contacto/contacto.html
+++ b/src/pages/contacto/contacto.html
@@ -14,5 +14,37 @@
 
 
 <ion-content padding>
-
+  <div>
+    <h1>App MAGAZINE</h1>
+  </div>
+  <div>
+    <button ion-button icon-left >
+      <ion-icon name="star">FB</ion-icon>
+    </button>
+    <button ion-button icon-left >
+      <ion-icon name="star">TW</ion-icon>
+    </button>
+    <button ion-button icon-left >
+      <ion-icon name="star">IG</ion-icon>
+    </button>
+  </div>
+  <div>
+    <ion-item>
+      <ion-label>Nombre</ion-label>
+      <ion-input type="text" placeholder="Nombre - Apellido"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Correo Electronico</ion-label>
+      <ion-input type="email" placeholder="ejemplo@hotmail.com"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Asunto</ion-label>
+      <ion-input type="text" placeholder="Descripcion breve"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Mensaje</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <button ion-button block>Enviar</button>
+  </div>
 </ion-content>
