--- a/src/pages/pdfviewer/pdfviewer.html
+++ b/src/pages/pdfviewer/pdfviewer.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the SelectorPdfPage page.
+  Generated template for the PdfviewerPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>selectorPDF</ion-title>
+    <ion-title>pdfviewer</ion-title>
   </ion-navbar>
 
 </ion-header>
