--- a/src/pages/pdf-selector/pdf-selector.html
+++ b/src/pages/pdf-selector/pdf-selector.html
@@ -17,9 +17,11 @@
   <ion-slides>
     <ion-slide>
       <h1>Coso 1</h1>
+      <button ion-button (click)="goPDFViewer()"> Abrir PDF </button>
     </ion-slide>
     <ion-slide>
       <h1>Coso 2</h1>
+      <button ion-button (click)="goPDFViewer()"> Abrir PDF </button>
     </ion-slide>
   </ion-slides>
 </ion-content>
