--- a/src/pages/pdf-selector/pdf-selector.html
+++ b/src/pages/pdf-selector/pdf-selector.html
@@ -14,14 +14,22 @@
 
 
 <ion-content padding>
-  <ion-slides>
-    <ion-slide>
-      <h1>Coso 1</h1>
-      <button ion-button (click)="goPDFViewer()"> Abrir PDF </button>
-    </ion-slide>
-    <ion-slide>
-      <h1>Coso 2</h1>
-      <button ion-button (click)="goPDFViewer()"> Abrir PDF </button>
-    </ion-slide>
+  <ion-slides id="seleccionarPDF">
+      <ion-slide>
+        <h1>Archivo 1</h1>
+        <button ion-button (click)='goPDFViewer()'> Abrir PDF </button> 
+      </ion-slide>
+      <ion-slide>
+        <h1>Archivo 2</h1>
+        <button ion-button (click)='goPDFViewer()'> Abrir PDF </button> 
+      </ion-slide>
+      -<ion-slide>
+        <h1>Archivo 3</h1>
+        <button ion-button (click)='goPDFViewer()'> Abrir PDF </button> 
+      </ion-slide>
+      <ion-slide>
+        <h1>Archivo 4</h1>
+        <button ion-button (click)='goPDFViewer()'> Abrir PDF </button> 
+      </ion-slide>
   </ion-slides>
 </ion-content>
