Se modifican elementos de aplicacion para importar libreria de Ionic para procesar PDF, se modifica la tabla para que inicie por default en pdfselector, se eliminan elementos sin usar en login.ts, se ingresa un elemento PDF para pruevas posteriores, se modifica los elementos dentro de pdf viwewer para preparar su uso posterior con las nuevas librerias

--- a/src/pages/tab-principal/tab-principal.html
+++ b/src/pages/tab-principal/tab-principal.html
@@ -1,4 +1,5 @@
-<ion-tabs>
+
+<ion-tabs selectedIndex="1">
     <ion-tab [root]="contactoRoot" tabTitle="Contacto" tabIcon="mail"></ion-tab>
 
     <ion-tab [root]="pdfSelectorRoot" tabTitle="Pdf selector" tabIcon="book"></ion-tab>
