--- a/src/pages/pdf-selector/pdf-selector.html
+++ b/src/pages/pdf-selector/pdf-selector.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the PdfSelectorPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,22 +8,9 @@
 
 
 <ion-content padding>
-  <ion-slides id="seleccionarPDF">
-      <ion-slide>
-        <h1>Archivo 1</h1>
-        <button ion-button (click)='goPDFViewer()'> Abrir PDF </button> 
-      </ion-slide>
-      <ion-slide>
-        <h1>Archivo 2</h1>
-        <button ion-button (click)='goPDFViewer()'> Abrir PDF </button> 
-      </ion-slide>
-      -<ion-slide>
-        <h1>Archivo 3</h1>
-        <button ion-button (click)='goPDFViewer()'> Abrir PDF </button> 
-      </ion-slide>
-      <ion-slide>
-        <h1>Archivo 4</h1>
-        <button ion-button (click)='goPDFViewer()'> Abrir PDF </button> 
-      </ion-slide>
+  <ion-slides id="contenido">
+    
+    
   </ion-slides>
+  {{cargardatos}}
 </ion-content>
