Se agregan librerias al proyecto para seleccionar y visualizar los elementos a abrir, además se importan estas librerias al proyecto con multiples errores de interpretación, se modifican los elementos de icono --favicon-- y se renombra el eriormente, se eliminan los elementos de algunas clases que no eran usados

--- a/src/pages/pdfviewer/pdfviewer.html
+++ b/src/pages/pdfviewer/pdfviewer.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>pdfviewer</ion-title>
+    <ion-title>PDF</ion-title>
   </ion-navbar>
 
 </ion-header>
