--- a/src/pages/pdf-selector/pdf-selector.html
+++ b/src/pages/pdf-selector/pdf-selector.html
@@ -7,10 +7,13 @@
 </ion-header>
 
 
-<ion-content padding>
-  <ion-slides id="contenido">
-    
-    
+<ion-content padding >
+  <ion-slides>
+    <ion-slide>
+      <img src="../../assets/imgs/AppMagazine.png" class="img">
+      <h1>Archivo 1</h1>
+      <button ion-button (click)="goPDFViewer()">Abrir</button>
+    </ion-slide>
   </ion-slides>
-  {{cargardatos}}
+
 </ion-content>
