Se modifican varias cosas del PDFSELECTOR pero sin cambios importantes

--- a/src/pages/pdf-selector/pdf-selector.html
+++ b/src/pages/pdf-selector/pdf-selector.html
@@ -1,19 +1,13 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>pdfSelector</ion-title>
+    <ion-title>Archivos PDF</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding >
-  <ion-slides>
-    <ion-slide>
-      <img src="../../assets/imgs/AppMagazine.png" class="img">
-      <h1>Archivo 1</h1>
-      <button ion-button (click)="goPDFViewer()">Abrir</button>
-    </ion-slide>
-  </ion-slides>
-
+    
+  
 </ion-content>
