Se modifica la pagina de pdfviewer para que pueda abrir pdf con una direccion estatica dentro de assets/pdf pero sin poder abrir en el dispositivo mobil, además se importan librerias o plugins para la manipulacion de archivos y direcciones (documentviewer y filepath), se modifica parte del login para poder integrar una condición en la entrada del usuario)

--- a/src/pages/pdf-selector/pdf-selector.html
+++ b/src/pages/pdf-selector/pdf-selector.html
@@ -8,6 +8,12 @@
 
 
 <ion-content padding >
-    
+    <ion-slides>
+      <ion-slide>
+        <img src="../../assets/imgs/AppMagazine.png" id="img">
+        <h1>Archivo 1</h1>
+        <button ion-button (click)="goPDFViewer()">Abrir</button>
+      </ion-slide>
+    </ion-slides>
   
 </ion-content>
