--- a/src/pages/pdfviewer/pdfviewer.html
+++ b/src/pages/pdfviewer/pdfviewer.html
@@ -1,18 +1,10 @@
-<!--
-  Generated template for the PdfviewerPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>PDF</ion-title>
+    <ion-title>Archivos PDF {{url}} </ion-title>
   </ion-navbar>
 
 </ion-header>
-
-
 <ion-content padding>
-  <p><script> 1+1</script></p>
+<iframe src="../../assets/pdf/am.pdf" ></iframe>
 </ion-content>
