Se modifica el visor de pdf pero sin resultados de elementos, se regresa a los cambios anteriores y se eliminan lineas de codigo que hacen fallar el sistema

--- a/src/pages/pdfviewer/pdfviewer.html
+++ b/src/pages/pdfviewer/pdfviewer.html
@@ -5,6 +5,7 @@
   </ion-navbar>
 
 </ion-header>
-<ion-content padding>
-<iframe src="../../assets/pdf/am.pdf" ></iframe>
+<ion-content padding >
+  <iframe id="pdf"></iframe>
+  
 </ion-content>
