Se logra realizar un metodo el cual genera atuomaticamente los slides (5 en hasta el momento) y se añade la libreria FILE, además de que en la pagina pdfviewer se abre (de forma manual hasta el momento) un documento pdf encontrado en assets/pdf

--- a/src/pages/pdf-selector/pdf-selector.html
+++ b/src/pages/pdf-selector/pdf-selector.html
@@ -8,12 +8,11 @@
 
 
 <ion-content padding >
-    <ion-slides>
-      <ion-slide>
-        <img src="../../assets/imgs/AppMagazine.png" id="img">
-        <h1>Archivo 1</h1>
-        <button ion-button (click)="goPDFViewer()">Abrir</button>
-      </ion-slide>
+    <ion-slides id="biblioteca"  >
+        <ion-slide *ngFor="let directorio of directorio; let i = index;">
+          <img src="{{directorio.path}}" id="img">
+          <h1>{{directorio.name}}</h1>
+          <button ion-button (click)="goPDFViewer()">Abrir</button>
+        </ion-slide>
     </ion-slides>
-  
 </ion-content>
