--- a/src/pages/pdfviewer/pdfviewer.html
+++ b/src/pages/pdfviewer/pdfviewer.html
@@ -1,11 +1,9 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Archivos PDF {{url}} </ion-title>
+    <ion-title>Archivos PDF </ion-title>
   </ion-navbar>
 
 </ion-header>
-<ion-content padding >
-  <iframe id="pdf"></iframe>
+  <iframe src="../../assets/pdf/am.pdf" id="pdf"></iframe>
   
-</ion-content>
