--- a/src/pages/registro/registro.html
+++ b/src/pages/registro/registro.html
@@ -48,13 +48,13 @@
               <ion-col>
                   <ion-item>
                       <ion-label><ion-icon name="male"></ion-icon> Hombre </ion-label>
-                      <ion-radio value="male" ><p>male</p></ion-radio>
+                      <ion-radio value="M" ><p>male</p></ion-radio>
                   </ion-item>
               </ion-col>
               <ion-col>
                   <ion-item >
                       <ion-label><ion-icon name="female"></ion-icon> Mujer </ion-label>
-                      <ion-radio value="female"></ion-radio>
+                      <ion-radio value="F"></ion-radio>
                     </ion-item>
               </ion-col>
             </ion-row>
@@ -68,9 +68,9 @@
         <ion-datetime displayFormat="MMM DD, YYYY" pickerFormat="MMM DD YYYY" [(ngModel)]="dateOfEvent"></ion-datetime>
       </ion-item>
       <ion-item>
-        <ion-label class="col-12"><ion-icon name="pin"></ion-icon> Estado y ciudad</ion-label>
+        <ion-label class="col-12"><ion-icon name="pin"></ion-icon> País y Estado</ion-label>
         <br>
-        <ion-select [(ngModel)]="Estado">
+        <ion-select [(ngModel)]="Pais">
           <ion-option value="nowhere">No Where</ion-option>
         </ion-select>
         <ion-select [(ngModel)]="Ciudad" >
