Se corrigen errores de variables inseguras y se logra abrir 2 archivos diferentes registrados previamente en la variable directorio dentro de pdfselector el cual será suplantado por un array que tome los datos de un query de sql, se añade seguridad en el login de manera manual la cual será suplantada con elementos obtenidos de la consulta de mysql

--- a/src/pages/pdf-selector/pdf-selector.html
+++ b/src/pages/pdf-selector/pdf-selector.html
@@ -11,8 +11,8 @@
     <ion-slides id="biblioteca"  >
         <ion-slide *ngFor="let directorio of directorio; let i = index;">
           <img src="{{directorio.path}}" id="img">
-          <h1>{{directorio.name}}</h1>
-          <button ion-button (click)="goPDFViewer()">Abrir</button>
+          <h1>{{directorio.name}} ~ {{directorio.URL}}</h1>
+          <button ion-button (click)="goPDFViewer([i])">Abrir</button>
         </ion-slide>
     </ion-slides>
 </ion-content>
