--- a/src/pages/pdfviewer/pdfviewer.html
+++ b/src/pages/pdfviewer/pdfviewer.html
@@ -1,9 +1,9 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Archivos PDF </ion-title>
+    <ion-title>{{titulo}} </ion-title>
   </ion-navbar>
 
 </ion-header>
-  <iframe src="../../assets/pdf/am.pdf" id="pdf"></iframe>
+  <iframe [src]="pdfUrl" id="pdf"></iframe>
   
